# finances

./: .gitignore  CHANGELOG.md  README.md  finances.code-workspace  invoke.toml  pyproject.toml
docs/API/: search.js  src.html
docs/API/src/: finances.html
docs/API/src/finances/: data.html  io.html  models.html  pipelines.html  schemas.html  (+2 more)
docs/documentation/01_business_knowledge/: business_rules.md  context_and_background.md  domain_glossary.md  stakeholders.md
docs/documentation/02_project_management/: definition_of_done.md  project_charter.md  roadmap.md
docs/documentation/03_proposal/: project_proposal.md
docs/documentation/04_data/: data_dictionary.md  data_sources.md  data_versioning.md
docs/documentation/05_eda/: eda_findings.md
docs/documentation/06_preprocessing/: feature_engineering.md  preprocessing_steps.md
docs/documentation/07_experimentation/: experiment_tracking.md  model_selection.md
docs/documentation/08_training/: training_process.md
docs/documentation/09_evaluation/: model_evaluation.md
docs/documentation/10_model_card/: model_card.md
docs/documentation/11_deployment/: deployment_guide.md  infrastructure.md
docs/documentation/12_model_monitoring_and_maintenance/: monitoring_plan.md  runbook.md
docs/documentation/13_security_governance/: governance.md  security.md
docs/documentation/14_architecture/: 0_system_architecture.md  1_c4_level1_context.md  2_c4_level2_container.md  3_c4_level3_component.md  4_c4_level4_code.md  5_ml_pipeline_diagram.md
docs/documentation/15_user_guide/: user_guide.md
docs/documentation/16_executive_presentation/: executive_summary_presentation.md  executive_summary_report.md
notebooks/development/: run_get_oracle.py
notebooks/review/: review_if_a_symbol_exists.ipynb  review_symbols.ipynb
src/finances/: settings.py
src/finances/configs/: env.py  io.py  symbols.py
src/finances/models/: schemas.py
tasks/: __init__.py  data.py  devops.py  symbols.py
(+56 files in other folders)
